# DedalusSE

./: README.md
Dedalus-v0/: README.md  build.sh
Dedalus-v0/.Rproj.user/CC2A474E/: session-persistent-state
Dedalus-v0/.Rproj.user/CC2A474E/pcs/: files-pane.pper  source-window.pper  windowlayoutstate.pper
Dedalus-v0/.Rproj.user/shared/notebooks/: paths
Dedalus-v0/data/: map_level_3  map_level_4  map_level_5  map_level_7  map_mini_f_mult
Dedalus-v0/doc/html/: files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html
Dedalus-v0/doc/html/search/: all_63.js  all_66.js  all_6e.js  all_73.js  classes_6c.js  defines_64.js  defines_70.js  enums_65.js  enumvalues_70.js  enumvalues_77.js  files_67.js  functions_5f.js  functions_61.js  functions_63.js  variables_61.js  variables_63.js  variables_65.js  variables_73.js
Dedalus-v0/src/: ariadneString.c  config.c  config.h  dedalus.c  game.c  gps.h  map.c  map.h
Dedalus-v0/src/ai/: ai_shall_not_pass.h
Dedalus-v0/src/dox/: DoxygenLayout.xml
Dedalus-v1/: CMakeLists.txt
Dedalus-v1/data/: mapMoi  map_global  map_level_1  map_mini_f_mult
Dedalus-v1/doc/html/: globals.html  globals_eval.html
Dedalus-v1/doc/html/d0/d61/: build_8sh_source.html
Dedalus-v1/doc/html/d1/dcb/: game_8c.html
Dedalus-v1/doc/html/d2/d90/: ai__shall__not__pass_8h_source.html
Dedalus-v1/doc/html/d2/dd5/: game_8h_source.html
Dedalus-v1/doc/html/d3/d91/: gps_8c_source.html
Dedalus-v1/doc/html/d4/d68/: display_8h.html
Dedalus-v1/doc/html/d5/d37/: ai_8c.html  ai_8c_source.html
Dedalus-v1/doc/html/db/d16/: config_8h.html
Dedalus-v1/doc/html/db/d34/: gps_8h.html  gps_8h_source.html
Dedalus-v1/doc/html/dc/db7/: map_8h.html  map_8h_source.html
Dedalus-v1/doc/html/de/d77/: ai__random_8h.html
Dedalus-v1/doc/html/search/: all_6d.js  all_70.js  all_79.js  classes_67.js  defines_61.js  defines_6d.js  defines_77.js  enumvalues_65.js  files_61.js  files_64.js  functions_67.js  functions_73.js  functions_75.js  search.js  typedefs_73.js  variables_64.js  variables_67.js
Dedalus-v1/src/: character.c  character.h  display.c  display.h  game.c  game.h
Dedalus-v1/src/ai/: ai_random.c
Dedalus-v1/src/dox/: Doxyfile  main.dox
Dedalus-v2/: LICENSE
Dedalus-v2/data/: map_level_2  map_level_6  map_mini_l
Dedalus-v2/doc/html/: files.html  globals_defs.html  globals_enum.html  globals_type.html  globals_vars.html
Dedalus-v2/doc/html/search/: all_64.js  all_68.js  all_69.js  all_72.js  classes_61.js  classes_63.js  enums_63.js  (+3 more)
Dedalus-v2/src/: ai.c  ariadneString.h  game.c
Dedalus-v2/src/ai/: ai_random.h
Dedalus-v3/: Makefile  file.txt
Dedalus-v3/data/: mapMoi  mapMoi~  map_level_8  map_mini_f  map_mini_f_mult~
Dedalus-v3/doc/html/: globals_func.html  index.html
Dedalus-v3/src/: ai.h  dedalus.c  game.c  gps.c
Dedalus-v3/src/ai/: ai_shall_not_pass.c
Dedalus-v3/src/dox/: main.md
(+98 files in other folders)
